--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -9,10 +9,18 @@
     <h1>things i need to do</h1>
     <table>
         {% for item in items %}
-        <tr>
-            <td>{{ item.name }}</td>
-            <td>{{ item.done }}</td>
-        </tr>
+            <tr>
+                {% if item.done %}
+                    <td><strike>{{ item.name }}</strike></td>
+                {% else %}
+                    <td>{{ item.done }}</td>
+                {% endif %}
+            </tr>
+            <!-- If there are no tasks to complete will render html below {% empty %} -->
+            {% empty %}
+            <tr>
+                <td>You have nothing to do!</td>
+            </tr>
         {% endfor %}
     </table>
 </body>
