--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Add an Item</h1>
 
-    <form method="post" action="add">
+    <form method="POST" action="add">
+        {% csrf_token %}
         <div>
             <p>
                 <label for="id_name">Name: </label>
