--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>things i need to do</h1>
+    <h1>Things I Need To Do</h1>
     <table>
         {% for item in items %}
             <tr>
                 {% if item.done %}
                     <td><strike>{{ item.name }}</strike></td>
                 {% else %}
-                    <td>{{ item.done }}</td>
+                    <td>{{ item.name }}</td>
                 {% endif %}
             </tr>
         {% empty %}
